Fixed preview in file-uploader-component being squished

--- a/src/app/components/file-uploader/file-uploader.component.scss
+++ b/src/app/components/file-uploader/file-uploader.component.scss
@@ -59,9 +59,9 @@
       margin-bottom: 10px;
 
       .file-icon {
-        width: 128px;
+        max-width: 128px;
         height: 128px;
-        background-position: center;
+        object-fit: cover;
         border-radius: 50%;
       }
 
